# Nexus

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
.github/agents/: android-developer.agent.md  api-designer.agent.md  architect.agent.md  code-reviewer-backend.agent.md  code-reviewer.agent.md  db-migrator.agent.md  ios-developer.agent.md  orchestrator.agent.md  playwright-tester.agent.md  security-auditor.agent.md  test-writer.agent.md
.github/hooks/: pre-commit.json
.github/prompts/: new-domain.prompt.md  new-test.prompt.md
.github/workflows/: e2e.yml
.playwright-mcp/: page-2026-07-16T15-26-55-824Z.yml  page-2026-07-16T15-27-00-885Z.yml  page-2026-07-16T15-27-09-943Z.yml  page-2026-07-16T15-27-23-419Z.yml  page-2026-07-16T15-27-48-787Z.yml  page-2026-07-16T15-27-53-221Z.yml  page-2026-07-16T15-28-09-430Z.yml  page-2026-07-16T15-28-13-737Z.yml  page-2026-07-16T15-28-25-774Z.yml  page-2026-07-16T15-28-57-961Z.yml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 14a57d590271_add_jobs_domain.py  39f9e2867723_add_customers_domain.py  3c8d681e0f21_add_appointments_domain.py  889c19af954b_initial_auth_domain.py  afd7ffc0766e_drop_customer_notes_created_by_fk.py  f65821ee4aa4_make_customer_notes_created_by_nullable.py
backend/app/: __init__.py  main.py
backend/app/appointments/: __init__.py  deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/auth/: __init__.py  deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/core/: __init__.py  config.py  database.py  deps.py  middleware.py  redis_client.py  security.py  tenant.py
backend/app/customers/: __init__.py  deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/jobs/: __init__.py  deps.py  models.py  repository.py  router.py  schemas.py  service.py
backend/tests/: __init__.py  conftest.py
backend/tests/auth/: conftest.py  test_router.py  test_service.py
backend/tests/customers/: __init__.py  conftest.py  test_router.py  test_service.py
docs/: user-stories.md
docs/adr/: 0003-postgresql-replication-strategy.md  0004-backup-strategy.md  0005-file-storage-ha.md  0006-disaster-recovery-runbook.md  0007-security-architecture.md  0008-multi-factor-authentication.md  0009-microservice-strategy.md  0010-hierarchical-tenants.md  0011-monorepo-strategy.md  0012-mock-first-validation.md  0013-desktop-qt-qml-mvvm.md  0014-customers-domain.md  template.md
docs/contracts/: README.md  appointments.yaml  auth.yaml  customers.yaml  jobs.yaml
mock/: nginx.conf
mock/admin-panel/: Dockerfile
scripts/: ci-local.sh
(+1294 files in other folders)
